# agentops-bench

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
fixtures/get_stock_price/: AAPL.json  GOOGL.json  MSFT.json  NVDA.json
fixtures/get_weather/: London.json  Paris.json  San_Francisco.json  Tokyo.json  paris_france.json  tokyo_japan.json
fixtures/web_search/: 102_3_million_vietnam_population_2025_of_e054a9eb3210.json  10tb_database_cost_comparison_postgresql_97fe471410bb.json  10tb_dataset_cost_postgresql_mongodb_dyn_22a3169e00f0.json  1706_03762_arxiv_year_posted_d509de2a5fe0.json  2020_tokyo_olympics_held_in_2021_most_re_57cb850878f4.json  2024_summer_olympics_host_city_98b9457c1c62.json  2024_summer_olympics_paris_host_city_2f76fd3602b1.json  50000_events_per_second_database_write_t_664a0279c5bd.json  amazon_rds_postgresql_instance_pricing_r_c9b9aae55bed.json  amazon_rds_postgresql_pricing_io2_gp3_st_b4ed44cff523.json  amazon_rds_postgresql_pricing_io_optimiz_fcc40944f64c.json  amazon_rds_postgresql_pricing_storage_io_7e3e3f53ee4d.json  amazon_rds_postgresql_pricing_storage_io_ebe141ac1ced.json  (+787 more)
paper/: body.tex  main.tex  main_neurips.tex  neurips_2026.sty  references.bib
scripts/: analyze_pairwise.py  analyze_pilot.py  analyze_safety_per_payload.py  build_fixtures.py  combine_reports.py  make_figures.py  merge_opus_parts.py  redo_anthropic_pilot.sh  redo_opus_pilot.sh  run_agentdojo.py  run_pilot_v1_seeded.sh  run_pilot_v2.sh  smoke_test.py
tasks/: README.md
(+118 files in other folders)
