[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentops-bench"
version = "0.1.0"
description = "A benchmark for operational reliability of LLM agent systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "AgentOps-Bench Contributors" },
]
keywords = ["benchmark", "llm", "agents", "reliability", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic",
    "openai",
    "pydantic>=2.0",
    "httpx",
    "rich",
    "click",
    "tiktoken",
    "numpy",
    "pyyaml",
    "yfinance",  # real get_stock_price
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[project.scripts]
agentops-bench = "agentops_bench.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentops_bench"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
